fixed so nav and search both display expected photo results stuck on how to not make a new api request every time I go to a nav link - need to cache the results somehow?? Need to add a loader and review project grading / extra credit

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,10 @@ input {
   width: 100%;
 }
 
+.page-not-found {
+  list-style-type: none;
+}
+
 @media only screen and (max-width: 767px)  {
   body {
     padding-top: 2em;
